--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,17 @@
 version: '3.4'
 services:
 
-  vpn:
-    container_name: vpn
-    image: dperson/openvpn-client:latest
-    cap_add:
-      - net_admin # required to modify network interfaces
-    restart: unless-stopped
-    volumes:
-      - /dev/net/tun:/dev/net/tun # tun device
-      - ${HOME}/.vpn:/vpn # OpenVPN configuration
-    ports:
-      - 8112:8112 # port for deluge web UI to be reachable from local network
-    command: '-r 192.168.1.0/24' # route local network traffic
-
   deluge:
     container_name: deluge
     image: linuxserver/deluge:latest
     restart: always
-    network_mode: service:vpn # run on the vpn network
+    network_mode: host
     environment:
-      - PUID=1000 # default user id, for downloaded files access rights
-      - PGID=1000 # default group id, for downloaded files access rights
-      - TZ=Europe/Paris # timezone
+      - PUID=1026 # default user id, for downloaded files access rights
+      - PGID=100 # default group id, for downloaded files access rights
+      - TZ=America/New_York # timezone
     volumes:
-      - /media/${USER}/data1/downloads/ongoing:/downloads # download folder
+      - ${HOME}/media/downloads/ongoing:/downloads # download folder
       - ${HOME}/.config/deluge:/config # config files
 
   jackett:
@@ -33,12 +20,12 @@ services:
     restart: unless-stopped
     network_mode: host
     environment:
-      - PUID=1000 # default user id, for downloaded files access rights
-      - PGID=1000 # default group id, for downloaded files access rights
-      - TZ=Europe/Paris # timezone
+      - PUID=1026 # default user id, for downloaded files access rights
+      - PGID=100 # default group id, for downloaded files access rights
+      - TZ=America/New_York # timezone
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - /media/${USER}/data1/downloads/ongoing/torrent-blackhole:/downloads # place where to put .torrent files
+      - ${HOME}/media/downloads/ongoing/torrent-blackhole:/downloads # place where to put .torrent files
       - ${HOME}/.config/jackett:/config # config files
 
   nzbget:
@@ -47,11 +34,11 @@ services:
     restart: unless-stopped
     network_mode: host
     environment:
-      - PUID=1000 # default user id, for downloaded files access rights
-      - PGID=1000 # default group id, for downloaded files access rights
-      - TZ=Europe/Paris # timezone
+      - PUID=1026 # default user id, for downloaded files access rights
+      - PGID=100 # default group id, for downloaded files access rights
+      - TZ=America/New_York # timezone
     volumes:
-      - /media/${USER}/data1/downloads/ongoing:/downloads # download folder
+      - ${HOME}/media/downloads/ongoing:/downloads # download folder
       - ${HOME}/.config/nzbget:/config # config files
 
   sonarr:
@@ -60,14 +47,14 @@ services:
     restart: unless-stopped
     network_mode: host
     environment:
-      - PUID=1000 # default user id, for downloaded files access rights
-      - PGID=1000 # default group id, for downloaded files access rights
-      - TZ=Europe/Paris # timezone
+      - PUID=1026 # default user id, for downloaded files access rights
+      - PGID=100 # default group id, for downloaded files access rights
+      - TZ=America/New_York # timezone
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${HOME}/.config/sonarr:/config # config files
-      - /media/${USER}/data1/downloads/series:/tv # tv shows folder
-      - /media/${USER}/data1/downloads/ongoing:/downloads # download folder
+      - ${HOME}/media/downloads/series:/tv # tv shows folder
+      - ${HOME}/media/downloads/ongoing:/downloads # download folder
 
   radarr:
     container_name: radarr
@@ -75,23 +62,23 @@ services:
     restart: unless-stopped
     network_mode: host
     environment:
-      - PUID=1000 # default user id, for downloaded files access rights
-      - PGID=1000 # default group id, for downloaded files access rights
-      - TZ=Europe/Paris # timezone
+      - PUID=1026 # default user id, for downloaded files access rights
+      - PGID=100 # default group id, for downloaded files access rights
+      - TZ=America/New_York # timezone
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${HOME}/.config/radarr:/config # config files
-      - /media/${USER}/data1/downloads/movies:/movies # movies folder
-      - /media/${USER}/data1/downloads/ongoing:/downloads # download folder
+      - ${HOME}/media/downloads/movies:/movies # movies folder
+      - ${HOME}/media/downloads/ongoing:/downloads # download folder
 
   plex-server:
     container_name: plex-server
     image: plexinc/pms-docker:latest
     restart: unless-stopped
     environment:
-      - TZ=Europe/Paris # timezone
+      - TZ=America/New_York # timezone
     network_mode: host
     volumes:
       - ${HOME}/.plex/db:/config # plex database
       - ${HOME}/.plex/transcode:/transcode # temp transcoded files
-      - /media/${USER}/data1/downloads:/data # media library
+      - ${HOME}/media/downloads:/data # media library
